--- a/homepageweb.css
+++ b/homepageweb.css
@@ -1,3 +1,14 @@
+@media (max-width: 874px) {
+  h1, h2 {
+    font-size: 28px;
+  }
+
+  ul {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .logo-container {
   background-color: #ECA3A3;
   padding: 1rem 0;
@@ -87,53 +98,72 @@ h1{
     display: block;
   }
 
-  .carrousel {
+  body {
+    background-color:#8AA38B;
+  }
+
+  .carrousel1 {
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
-    padding: 1rem;
+    padding: 2rem;
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
-    background-color: #ECA3A3;
+    background-color: #8AA38B;
+    max-width: 100%;
+    box-sizing: border-box;
   }
   
-  .carrousel article {
+  .carrousel1 article {
     flex: 0 0 auto;
-    min-width: 300px;
+    min-width: 320px;
     scroll-snap-align: start;
-    border-radius: 12px;
+    border-radius: 24px;
     overflow: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    background-color: #8AA38B;
+    transition: transform 0.3s ease;
+  }
+
+  .carrousel1 article:hover{
+    transform: scale(1.04);
   }
   
-  .carrousel article img {
+  .carrousel1 article img {
     width: 100%;
     height: auto;
     display: block;
   }
 
+  .carrousel1::-webkit-scrollbar {
+    display: none;
+  }
+
   .card1 {
-    background-color: #ECA3A3;
+    max-width: 500px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
   }
   
-  .card2 {
-    filter: sepia(60%);
-    border-radius: 20px;
+  .card2 img {
+   max-width: 500px;
+   height: auto;
+   display: block;
+   margin: 0 auto;
   }
   
   .card3 {
     transform: scale(1.03);
     transition: transform 0.3s ease-in-out;
   }
-  
-  .card3:hover {
-    transform: scale(1.08);
-  }
+
 
   .footer {
     background-color: #ECA3A3;
     margin: 0 auto;
     padding: 0;
     text-align: center;
+    font-size: 20px;
+    margin-top: 5%;
   }
